Updated Formatting (again)

--- a/Circuits.html
+++ b/Circuits.html
@@ -76,11 +76,11 @@ return false;
 <div class="row">
 	<div class="col-md-7">
 	<br>
-	<p>A <span class="vocabColor">circuit</span> is the interconnection of electrical 
+	<p>A <span class="vocabColor"><b>circuit</b></span> is the interconnection of electrical 
 	devices in a circular path. To power the circuit, voltage is generated from a power source and 
-	moves through the wires and components. <span class="vocabColor">Voltage</span> is the total work per unit charge 
+	moves through the wires and components. <span class="vocabColor"><b>Voltage</b></span> is the total work per unit charge 
 	associated with the motion of charge between two points. The rate at which the electrical 
-	charge is flowing through a wire or conductor is called <span class="vocabColor">current</span>. Both current and voltage are required 
+	charge is flowing through a wire or conductor is called <span class="vocabColor"><b>current</b></span>. Both current and voltage are required 
 	to achieve electrical power. </p> </div>
 	<div class="col-md-4">&nbsp;</div>
 	<div class="col-md-4">
@@ -114,9 +114,9 @@ return false;
 <div class="row">
 	<div class="col-md-7">
 	<br><br>
-	<p><span class="vocabColor">Resistance</span>, measured in Ohms, of an electrical 
+	<p><span class="vocabColor"><b>Resistance</b></span>, measured in Ohms, of an electrical 
 	component is when current opposes, or resists, flowing through that component. The most common 
-	electrical component to induce resistance is a <span class="vocabColor">Resistor</span>. It is important to remember that 
+	electrical component to induce resistance is a <span class="vocabColor"><b>Resistor</b></span>. It is important to remember that 
 	resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will 
 	oppose current. Most resistors have two or three colored bands to denote the resistance 
 	followed by either a silver or gold band to denote the tolerance level</p></div>
@@ -135,7 +135,7 @@ return false;
 
 <div class="row">
 	<div class="col-md-7">
-	<p>Resistance and current can be used to determine voltage with <span class="vocabColor">Ohm's Law</span>. Ohm’s law is the most important 
+	<p>Resistance and current can be used to determine voltage with <span class="vocabColor"><b>Ohm's Law</b></span>. Ohm’s law is the most important 
 	equation for basic circuitry. </p> </div>
 	<div class="col-md-4">&nbsp;</div>
 	<div class="col-md-4">
@@ -153,9 +153,9 @@ return false;
 </div>
 
 <p><h3>More Vocab:</h3></p>
-<p><span class="vocabColor">Node</span>: A point in a circuit where two or more 
+<p><span class="vocabColor"><b>Node</b></span>: A point in a circuit where two or more 
 components are connected </p>
-<p><span class="vocabColor">Loop</span>: An ordered sequence of nodes forming a 
+<p><span class="vocabColor"><b>Loop</b></span>: An ordered sequence of nodes forming a 
 closed path </p>
 
 <p><h2>Parallel and Series Resistors</h2></p>
@@ -168,10 +168,10 @@ closed path </p>
 	equivalent resistance. The first step to simplifying resistance is determining whether the 
 	resistors are in series or parallel. </p>
 	<br>
-	<p>Two elements are in <span class="vocabColor">series</span> if they share a node with no other 
+	<p>Two elements are in <span class="vocabColor"><b>series</b></span> if they share a node with no other 
 	elements connected at the node. Resistors in series add together to get an equivalent 
 	resistance. In the figure below, resistors A and B are in series. Two elements are in <span 
-	class="vocabColor">parallel</span> if they form a loop with no other 
+	class="vocabColor">parallel</b></span> if they form a loop with no other 
 	elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. 
 	In the figure below, resistors C and D are in parallel. </p> </div>
 	<div class="col-md-4">&nbsp;</div>
@@ -213,7 +213,7 @@ closed path </p>
 <br>
 <div class="row">
 	<div class="col-md-6">
-	<p><span class="vocabColor">Kirchoff's Voltage Law(KVL)</span> says that the 
+	<p><span class="vocabColor"><b>Kirchoff's Voltage Law(KVL)</b></span> says that the 
 	algebraic sum of the voltages around a loop is zero. To solve a circuit with KVL sum all the 
 	voltages, paying attention to the polarity of the voltage sources. </p> </div>
 	<div class="col-md-2">
@@ -225,7 +225,7 @@ closed path </p>
 
 <div class="row">
 	<div class="col-md-6">
-	<p><span class="vocabColor">Kirchoff's Current Law(KCL)</span> says that the 
+	<p><span class="vocabColor"><b>Kirchoff's Current Law(KCL)</b></span> says that the 
 	algebraic sum of all the currents entering a node is zero. To solve a circuit with KCL, the sum 
 	of all the currents leaving a node should be subtracted from all currents entering that same 
 	node with any unknown values left as variables.</p>
