--- a/Programming.html
+++ b/Programming.html
@@ -87,7 +87,7 @@ return false;
 <div class="row">
 <div class="col-md-7">
 <br><br>
-<p>Constants are values in a program that cannot change throughout a program’s execution. When a constant is defined, a program essentially just sees the constant and pastes the defined value into the function instead. Constants can be initialized using pound-define (#define) and are usually declared in all capital letters. <span class="vocabColor">Variables</span> are locations in memory for storing values and can change over time. All variables have a type (int, long, char, etc.) and a visibility: global or local. Further, variables in certain instances can be static.</p>
+<p>Constants are values in a program that cannot change throughout a program’s execution. When a constant is defined, a program essentially just sees the constant and pastes the defined value into the function instead. Constants can be initialized using pound-define (#define) and are usually declared in all capital letters. <span class="vocabColor"><b>Variables</b></span> are locations in memory for storing values and can change over time. All variables have a type (int, long, char, etc.) and a visibility: global or local. Further, variables in certain instances can be static.</p>
 </div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4">
@@ -103,7 +103,7 @@ return false;
 <div class="row">
 <div class="col-md-7">
 <br><br>
-<p> Type refers to what can be stored in a variable; different types can hold different values. For example, an <span class="vocabColor">int</span>, or integer, can hold two bytes (or values from -32,768 to 32,767) while a <span class="vocabColor">char</span>, or character, can hold one byte (or values from 0-255). For this reason, ints are usually used for numbers while chars are usually used for alphanumeric symbols.</p>
+<p> Type refers to what can be stored in a variable; different types can hold different values. For example, an <span class="vocabColor"><b>int</b></span>, or integer, can hold two bytes (or values from -32,768 to 32,767) while a <span class="vocabColor"><b>char</b></span>, or character, can hold one byte (or values from 0-255). For this reason, ints are usually used for numbers while chars are usually used for alphanumeric symbols.</p>
 </div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4"> <A HREF="Programming_Popups/DataTypes.html" 
@@ -117,7 +117,7 @@ return false;
 <div class="row">
 <div class="col-md-7">
 <br><br>
-<p><span class="vocabColor">Visibility</span> refers to where or how the variable is declared; the two kinds of visibility are global and local. <span class="vocabColor">Global</span> variables are declared at the top of a program and are accessible throughout the entire program and all related functions. <span clas="vocabColor">Local</span> variables are defined inside a certain function, state, or other small part of a program and are not accessible beyond the outer limits of whatever they are declared in. </p>
+<p><span class="vocabColor"><b>Visibility</b></span> refers to where or how the variable is declared; the two kinds of visibility are global and local. <span class="vocabColor"><b>Global</b></span> variables are declared at the top of a program and are accessible throughout the entire program and all related functions. <span clas="vocabColor">Local</b></span> variables are defined inside a certain function, state, or other small part of a program and are not accessible beyond the outer limits of whatever they are declared in. </p>
 	  <br>
 	  <p>In the picture on the right, notice the line highlighted in yellow and the Arduino error message. This will occur if you try to access a local variable outside of where it is defined.</p></div>
 <div class="col-md-4">&nbsp;</div>
@@ -132,7 +132,7 @@ return false;
 <div class="row">
 <div class="col-md-7">
 <br><br>
-<p><span class="vocabColor">Static</span> variables do not change between invocations in the program in which they are used; they are similar to global variables in that way. Static variables can only be manipulated or used in the function in which they are declared, but they do not lose their value between multiple function calls. </p>
+<p><span class="vocabColor"><b>Static</b></span> variables do not change between invocations in the program in which they are used; they are similar to global variables in that way. Static variables can only be manipulated or used in the function in which they are declared, but they do not lose their value between multiple function calls. </p>
 <br><br>
 <p>Finally, it is important to remember that variables are case sensitive. The common format for naming a variable is called “camel case” and consists of the first (or only) word in lower case and any additional words beginning with an uppercase letter. Variable names never have spaces; underscores are an acceptable alternative. </p>
 </div>
@@ -187,7 +187,7 @@ return false;
 <div class="col-md-7">
 	<h4>What Are They?</h4>
 	<br>
-	<p><span class="vocabColor">If-statements</span> are tools that execute other statements if a certain condition is met. If-statements can be stand-alone; this means that they are only looking for one condition and executing in that specific case. They can also be used with an else-statement that serves as a catch-all for every instance when the condition isn’t met. </p>
+	<p><span class="vocabColor"><b>If-statements</b></span> are tools that execute other statements if a certain condition is met. If-statements can be stand-alone; this means that they are only looking for one condition and executing in that specific case. They can also be used with an else-statement that serves as a catch-all for every instance when the condition isn’t met. </p>
 	</div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4">
@@ -251,7 +251,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 <br>
 <h4>What Are They?</h4>
 <br>
-<p><span class="vocabColor">While-loops</span> are a type of loop that continues as long as a Boolean statement is true. The program runs through the loop checking the condition before running through each time. When the condition is found to be false, the loop “breaks” or stops repeating those statements and moves on to the next statement or function in the program. </p> </div>
+<p><span class="vocabColor"><b>While-loops</b></span> are a type of loop that continues as long as a Boolean statement is true. The program runs through the loop checking the condition before running through each time. When the condition is found to be false, the loop “breaks” or stops repeating those statements and moves on to the next statement or function in the program. </p> </div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4">
 <h4>Example</h4>
@@ -280,7 +280,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 <br>
 <h4>What Are They?</h4>
 <br><br>
-<p><span class="vocabColor">For-loops</span> are loops that run a specified number of times before moving on to the next part of the code. For-loops have an index variable that simply keeps track of how many times the loop has run and either increments or decrements at the beginning of the loop. After adjusting the index variable, the loop then checks a conditional statement that compares the index to some pre-defined value; as long as the statement is true, the loop will run.</p></div>
+<p><span class="vocabColor"><b>For-loops</b></span> are loops that run a specified number of times before moving on to the next part of the code. For-loops have an index variable that simply keeps track of how many times the loop has run and either increments or decrements at the beginning of the loop. After adjusting the index variable, the loop then checks a conditional statement that compares the index to some pre-defined value; as long as the statement is true, the loop will run.</p></div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4">
 <h4>Example</h4>
@@ -296,7 +296,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 <div class="row">
 <div class="col-md-7">
 <br><br>
-<p><span class="vocabColor">Break</span> is a tool that can stop a loop at any point, usually given a certain condition. When break is triggered, the program will move to the first lines below the loop and execute them.</p> </div>
+<p><span class="vocabColor"><b>Break</b></span> is a tool that can stop a loop at any point, usually given a certain condition. When break is triggered, the program will move to the first lines below the loop and execute them.</p> </div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4">
 	<br>
@@ -311,7 +311,7 @@ if</span> <span class="codeText"> (argument) { </span><br>
 <div class="row">
 <div class="col-md-7">
 <br>
-<p><span class="vocabColor">Continue</span> is a tool that can alter the progression of a loop given a certain condition. When a loop has a continue condition and the condition is met, the program will skip over all the rest of the code in that loop and jump back to the top of the loop. The loop will then run again from the top.</p> 
+<p><span class="vocabColor"><b>Continue</b></span> is a tool that can alter the progression of a loop given a certain condition. When a loop has a continue condition and the condition is met, the program will skip over all the rest of the code in that loop and jump back to the top of the loop. The loop will then run again from the top.</p> 
 </div>
 <div class="col-md-4">&nbsp;</div>
 <div class="col-md-4">
