--- a/Circuits.html
+++ b/Circuits.html
@@ -171,7 +171,7 @@ closed path </p>
 	<p>Two elements are in <span class="vocabColor"><b>series</b></span> if they share a node with no other 
 	elements connected at the node. Resistors in series add together to get an equivalent 
 	resistance. In the figure below, resistors A and B are in series. Two elements are in <span 
-	class="vocabColor">parallel</b></span> if they form a loop with no other 
+	class="vocabColor"><b>parallel</b></span> if they form a loop with no other 
 	elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. 
 	In the figure below, resistors C and D are in parallel. </p> </div>
 	<div class="col-md-4">&nbsp;</div>
