--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
 	</div>
 	</div>
 </div>
-
+<p><a href="Transmissions.html">Power Transmissions</a></p>
 <p><a href="Circuits.html">Circuits</a></p>
 <p><a href="Programming.html">Programming</a></p>
 <p><a href="Sensors.html">Sensors</a></p>
+<p><a href="StateProgramming.html">State Programming</a></p>
 <!-- CONTENT END -->
 </div>
 
