--- a/header.html
+++ b/header.html
@@ -1,3 +1,43 @@
+<head>
+
+	<!--
+	Thanks for looking at our source code! This webpage was developed for the 
+	RBE 1001 E-Textbook IQP in 2014. For questions, contact rbebook@wpi.edu
+	-->
+
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>RBE 1001 E-Book</title>
+
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- CSS for this page -->
+	<link href="css/theme.css" rel="stylesheet">
+
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+
+	<script>
+
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56500225-1', 'auto');
+  ga('send', 'pageview');
+
+  	function updateParagraph(target, paragraph){
+    $(target).html(paragraph);
+	}
+
+	</script>
+
+</head>
+
+<body role="document">
 <!-- Fixed Navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container">
@@ -17,9 +57,11 @@
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expand="false">Contents<span class="caret"></span></a>
 				<ul class="dropdown-menu" role="menu">
+				    <li><a href="Transmissions.html">Power Transmissions</a></li>
 					<li><a href="Circuits.html">Circuits</a></li>
 					<li><a href="Programming.html">Programming</a></li>
 					<li><a href="Sensors.html">Sensors</a></li>
+					<li><a href="StateProgramming.html">State Programming</a></li>
 				</ul>
 			</li>
 			</ul>
