--- a/Transmissions.html
+++ b/Transmissions.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<head>
+
     <!--
-    Thanks for looking at my source code! I use Bootstrap, a free and open source front-end. 
-    Poke around and if you see anything interesting, please shoot me an e-mail at pcbiggs@wpi.edu
+    Thanks for looking at our source code! This webpage was developed for the 
+    RBE 1001 E-Textbook IQP in 2014. For questions, contact rbebook@wpi.edu
     -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>RBE E-Book</title>
 
-    <!-- Bootstrap Core CSS-->
+    <title>RBE 1001 E-Book</title>
+
+    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <link href-"css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- CSS for this page -->
     <link href="css/theme.css" rel="stylesheet">
 
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="js/jquery-1.11.2.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+
     <script>
-    $(function() {
-        $("#header").load("header.html");
-        $("#footer").load("footer.html");
-    });
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56500225-1', 'auto');
+  ga('send', 'pageview');
+
     </script>
 
 </head>
 
 <body role="document">
-<div id="header"></div>
+<!-- Fixed Navbar -->
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <!-- This is where you add links to pages. Follow the above model -->
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expand="false">Contents<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="Transmissions.html">Power Transmissions</a></li>
+                    <li><a href="Circuits.html">Circuits</a></li>
+                    <li><a href="Programming.html">Programming</a></li>
+                    <li><a href="Sensors.html">Sensors</a></li>
+                    <li><a href="StateProgramming.html">State Programming</a></li>
+                </ul>
+            </li>
+            </ul>
+        </div>
+    </div>
+</div>
   
 <div class="container theme-showcase" role="main">
 <!-- CONTENT -->
@@ -107,6 +141,11 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 
 <div class="container"><hr></div>
 
-<div id="footer"></div>
+<div class="footer">
+    <div class="container">
+        <p class="text-muted">This site is part of The RBE 1001 E-Textbook Interactive Qualifying Project. By using this site, you agree to our <a href="about.html">Terms of Service</a></p>
+    </div>
+</div>
+
 </body>
 </html>
