--- a/Circuits.html
+++ b/Circuits.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
 
 	<!--
@@ -15,24 +16,62 @@
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<!-- Bootrap Theme -->
-	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<!-- CSS for this page -->
 	<link href="css/theme.css" rel="stylesheet">
 
-	<!-- This makes the header and footer appear. Don't edit it -->
-	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+
 	<script>
-	$(function() {
-		$("#header").load("header.html");
-		$("#footer").load("footer.html");
-	});
+
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56500225-1', 'auto');
+  ga('send', 'pageview');
+
+  	function updateParagraph(radio, target, paragraph){
+    	$(target).html(paragraph);
+    	$(radio).prop("checked", true);
+	}
+
 	</script>
 
 </head>
 
 <body role="document">
-<div id="header"></div>
+<!-- Fixed Navbar -->
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle Navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
+		<div class="navbar-collapse collapse">
+			<ul class="nav navbar-nav">
+			<li class="active"><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<!-- This is where you add links to pages. Follow the above model -->
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expand="false">Contents<span class="caret"></span></a>
+				<ul class="dropdown-menu" role="menu">
+				    <li><a href="Transmissions.html">Power Transmissions</a></li>
+					<li><a href="Circuits.html">Circuits</a></li>
+					<li><a href="Programming.html">Programming</a></li>
+					<li><a href="Sensors.html">Sensors</a></li>
+					<li><a href="StateProgramming.html">State Programming</a></li>
+				</ul>
+			</li>
+			</ul>
+		</div>
+	</div>
+</div>
 
 <br/>
 <div class="container theme-showcase" role="main">
@@ -242,20 +281,25 @@ closed path </p>
 <h2>Concept Questions</h2>
 <form>
 	<label for="Series">For which configuration of resistors would you add resistors to get equivalent resistance?</label>
-	<br/><input type="radio" id="direction" value="Parallel"> Parallel
-	<br/><input type="radio" id="direction" value="Series"> Series
-	
+	<br/>
+	<div onclick="updateParagraph('#Parallel','#series_result', 'correct');"><input type="radio" id="Parallel" value="Parallel" name="series"/> Parallel</div>
+	<div onclick="updateParagraph('#Series','#series_result', 'wrong');"><input type="radio" id="Series" value="Series" name="series"/> Series</div>
+	<p id="series_result" style="min-height:20px;"></p>
 	<br/>
 	<label for="Equations">Which of the following is true?</label>
-	<br/><input type="radio" id="direction" value="Power"> P = V/I
-	<br/><input type="radio" id="direction" value="Voltage"> V = P*I
-	<br/><input type="radio" id="direction" value="Current"> I = V/R
-	
+	<br/>
+	<div onclick="updateParagraph('#Power', '#equations_result', 'correct');"><input type="radio" id="Power" value="Power" name="equations"/> P = V/I</div>
+	<div onclick="updateParagraph('#Voltage', '#equations_result', 'wrong');"><input type="radio" id="Voltage" value="Voltage" name="equations"/> V = P*I</div>
+	<div onclick="updateParagraph('#Current', '#equations_result', 'wrong');"><input type="radio" id="Current" value="Current" name="equations"/> I = V/R</div>
+	<p id="equations_result" style="min-height:20px;"></p>
+
 	<br/>
 	<label for="Parallel">What would be the equivalent resistance of three 330 Ohm resistors in parallel?</label>
-	<br/><input type="radio" id="direction" value="NineNinety"> 990 Ohms
-	<br/><input type="radio" id="direction" value="Sixty"> 60 Ohms
-	<br/><input type="radio" id="direction" value="OneTen"> 110 Ohms
+	<br/>
+	<div onclick="updateParagraph('#NineNinety', '#parallel_result', 'correct');"><input type="radio" id="NineNinety" value="NineNinety" name="parallel"/> 990 Ohms</div>
+	<div onclick="updateParagraph('#Sixty', '#parallel_result', 'wrong');"><input type="radio" id="Sixty" value="Sixty" name="parallel"/> 60 Ohms</div>
+	<div onclick="updateParagraph('#OneTen', '#parallel_result', 'wrong');"><input type="radio" id="OneTen" value="OneTen" name="parallel"/> 110 Ohms</div>
+	<p id="parallel_result" style="min-height:20px;"></p>
 </form>
 
 <h3>Section Vocab</h3>
@@ -276,6 +320,11 @@ closed path </p>
 
 <div class="container"><hr></div>
 
-<div id="footer"></div>
+<div class="footer">
+	<div class="container">
+		<p class="text-muted">This site is part of The RBE 1001 E-Textbook Interactive Qualifying Project. By using this site, you agree to our <a href="about.html">Terms of Service</a></p>
+	</div>
+</div>
+
 </body>
 </html>	
