--- a/about.html
+++ b/about.html
@@ -15,21 +15,15 @@
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<!-- Bootrap Theme -->
-	<link href="css/boostrap-theme.min.css" rel="stylesheet">
 	<!-- CSS for this page -->
 	<link href="css/theme.css" rel="stylesheet">
 
-	<!-- This makes the header and footer appear. Don't edit it -->
-	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+
 	<script>
-	$(function() {
-		$("#header").load("header.html");
-		$("#footer").load("footer.html");
-	});
-	
-// Google Analytics: Uncomment if you need to track this page
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -37,13 +31,45 @@
   ga('create', 'UA-56500225-1', 'auto');
   ga('send', 'pageview');
 
+  	function updateParagraph(target, paragraph){
+    $(target).html(paragraph);
+	}
 
 	</script>
 
 </head>
 
 <body role="document">
-<div id="header"></div>
+<!-- Fixed Navbar -->
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle Navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
+		<div class="navbar-collapse collapse">
+			<ul class="nav navbar-nav">
+			<li class="active"><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<!-- This is where you add links to pages. Follow the above model -->
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expand="false">Contents<span class="caret"></span></a>
+				<ul class="dropdown-menu" role="menu">
+				    <li><a href="Transmissions.html">Power Transmissions</a></li>
+					<li><a href="Circuits.html">Circuits</a></li>
+					<li><a href="Programming.html">Programming</a></li>
+					<li><a href="Sensors.html">Sensors</a></li>
+					<li><a href="StateProgramming.html">State Programming</a></li>
+				</ul>
+			</li>
+			</ul>
+		</div>
+	</div>
+</div>
 
 <br/>
 <div class="container theme-showcase" role="main">
