Add Event tracking to check questions in circuits

--- a/Circuits.html
+++ b/Circuits.html
@@ -21,6 +21,7 @@
 
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/bootstrap.js"></script>
+    <script src="js/ga.js"></script>
 
 	<script>
 
@@ -282,23 +283,23 @@ closed path </p>
 <form>
 	<label for="Series">For which configuration of resistors would you add resistors to get equivalent resistance?</label>
 	<br/>
-	<div onclick="updateParagraph('#Parallel','#series_result', 'correct');"><input type="radio" id="Parallel" value="Parallel" name="series"/> Parallel</div>
-	<div onclick="updateParagraph('#Series','#series_result', 'wrong');"><input type="radio" id="Series" value="Series" name="series"/> Series</div>
+	<div onclick="updateParagraph('#Parallel','#series_result', 'correct'); _gaq.push(['_trackEvent', 'checkQuestion', 'correct_click', 'Circuits.Series']);"><input type="radio" id="Parallel" value="Parallel" name="series"/> Parallel</div>
+	<div onclick="updateParagraph('#Series','#series_result', 'wrong'); _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Series'])"><input type="radio" id="Series" value="Series" name="series"/> Series</div>
 	<p id="series_result" style="min-height:20px;"></p>
 	<br/>
 	<label for="Equations">Which of the following is true?</label>
 	<br/>
-	<div onclick="updateParagraph('#Power', '#equations_result', 'correct');"><input type="radio" id="Power" value="Power" name="equations"/> P = V/I</div>
-	<div onclick="updateParagraph('#Voltage', '#equations_result', 'wrong');"><input type="radio" id="Voltage" value="Voltage" name="equations"/> V = P*I</div>
-	<div onclick="updateParagraph('#Current', '#equations_result', 'wrong');"><input type="radio" id="Current" value="Current" name="equations"/> I = V/R</div>
+	<div onclick="updateParagraph('#Power', '#equations_result', 'correct'); _gaq.push(['_trackEvent', 'checkQuestion', 'correct_click', 'Circuits.Equations'])"><input type="radio" id="Power" value="Power" name="equations"/> P = V/I</div>
+	<div onclick="updateParagraph('#Voltage', '#equations_result', 'wrong'); _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Equations'])"><input type="radio" id="Voltage" value="Voltage" name="equations"/> V = P*I</div>
+	<div onclick="updateParagraph('#Current', '#equations_result', 'wrong'); _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Equations'])"><input type="radio" id="Current" value="Current" name="equations"/> I = V/R</div>
 	<p id="equations_result" style="min-height:20px;"></p>
 
 	<br/>
 	<label for="Parallel">What would be the equivalent resistance of three 330 Ohm resistors in parallel?</label>
 	<br/>
-	<div onclick="updateParagraph('#NineNinety', '#parallel_result', 'correct');"><input type="radio" id="NineNinety" value="NineNinety" name="parallel"/> 990 Ohms</div>
-	<div onclick="updateParagraph('#Sixty', '#parallel_result', 'wrong');"><input type="radio" id="Sixty" value="Sixty" name="parallel"/> 60 Ohms</div>
-	<div onclick="updateParagraph('#OneTen', '#parallel_result', 'wrong');"><input type="radio" id="OneTen" value="OneTen" name="parallel"/> 110 Ohms</div>
+	<div onclick="updateParagraph('#NineNinety', '#parallel_result', 'correct'); _gaq.push(['_trackEvent', 'checkQuestion', 'correct_click', 'Circuits.Parallel'])"><input type="radio" id="NineNinety" value="NineNinety" name="parallel"/> 990 Ohms</div>
+	<div onclick="updateParagraph('#Sixty', '#parallel_result', 'wrong') _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Parallel']);"><input type="radio" id="Sixty" value="Sixty" name="parallel"/> 60 Ohms</div>
+	<div onclick="updateParagraph('#OneTen', '#parallel_result', 'wrong'); _gaq.push(['_trackEvent', 'checkQuestion', 'wrong_click', 'Circuits.Parallel'])"><input type="radio" id="OneTen" value="OneTen" name="parallel"/> 110 Ohms</div>
 	<p id="parallel_result" style="min-height:20px;"></p>
 </form>
 
