--- a/header.html
+++ b/header.html
@@ -18,6 +18,7 @@
 
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/bootstrap.js"></script>
+    <script src="js/ga.js"></script>
 
 	<script>
 
