--- a/Transmissions.html
+++ b/Transmissions.html
@@ -130,7 +130,9 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 	<div class="col-md-4">&nbsp;</div>
 	<div class="col-md-4"><center><img src="TransmissionPictures/GearRatio.png" HEIGHT="50px" /img></center>
 	<br>
-	<center><img src="TransmissionPictures/GearVariables.png" HEIGHt="75px" /img></center></div>
+	<center><img src="TransmissionPictures/GearVariables.png" HEIGHt="50px" /img></center></div>
+	<br>
+	<center><span class="captionStyle">Equation for Finding Gear Ratios</span></center>
 </div>
 <br><br>
 <div class="row">
@@ -155,7 +157,10 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 		<br>
 		<b>Fun Fact</b> – spur gears do not have to be circular. They can be any shape as long as the tooth pattern of one gear is an exact inverse of that of the gear it will mesh with. </p></div>
 	<div class="col-md-4">&nbsp;</div>
-	<div class="col-md-4"><center><img src="TransmissionPictures/SquareGears.png" HEIGHT="150px" /img></center></div>
+	<div class="col-md-4"><center><img src="TransmissionPictures/SquareGears.png" HEIGHT="150px" /img></center>
+	<br>
+	<center><span class="captionStyle">Square Gears That Mesh Perfectly</span></center>
+	</div>
 </div>
 <br>
 <div class="row">
@@ -178,6 +183,7 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 <br>
 <h2>Chain and Sprockets</h2>
 <p>Chain and sprocket transmissions have similar torque and speed properties to gears, but can be used in situations where the motor is located far from the wheel or mechanism. When working with chain and sprocket transmissions, the distance between two of the rollers is called pitch. Chains are rated with two-digit codes. The first digit denotes the pitch of the chain in eighths of an inch. The second digit can be a 0, 1, or 5; a zero denotes a chain as a “roller” chain, a one denotes a “lightweight” chain, and a five denotes a “brushed” chain. Two common chains are #25, with a breaking strength of 875lbs and a working strength of 140lbs, and #35, with a breaking strength of 2100lbs and a working strength of 480lbs. 
+<br>
 When using chain and sprocket transmissions, the chain must be wrapped a minimum of 120o around the sprocket. Further, an ideal reduction for a chain and sprocket reduction is 12T to 75T. A larger reduction will lead to losses in efficiency from the chain. A smaller reduction than 12:75 will result in vibrations of the system and excess wear. Finally, it is important to remember that any chain is only as strong as its master link. A master link is able to open in order to add or remove links from the total chain length; because of this it will only withstand up to 70% of the strength of the rest of the links. </p>
 <br><br>
 
