--- a/Transmissions.html
+++ b/Transmissions.html
@@ -129,10 +129,9 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 	<div class="col-md-7"><br><br><p>A gear ratio determines what amount of the motor power will be converted to torque with the gear reduction. To find the gear ratio, you need to know the number of teeth (N) or the torque (τ) on both the driver and driven gears, as well as the efficiency of the gears.</p></div>
 	<div class="col-md-4">&nbsp;</div>
 	<div class="col-md-4"><center><img src="TransmissionPictures/GearRatio.png" HEIGHT="50px" /img></center>
+	<center><img src="TransmissionPictures/GearVariables.png" HEIGHt="50px" /img></center>
 	<br>
-	<center><img src="TransmissionPictures/GearVariables.png" HEIGHt="50px" /img></center></div>
-	<br>
-	<center><span class="captionStyle">Equation for Finding Gear Ratios</span></center>
+	<center><span class="captionStyle">Equation for Finding Gear Ratios</span></center></div>
 </div>
 <br><br>
 <div class="row">
@@ -152,7 +151,7 @@ The entire system of gears used to manipulate motor speed, torque or direction i
 <h2>Spur Gears</h2>
 <div class="row">
 	<div class="col-md-7">
-		<br>
+		<br><br>
 		<p>Spur gears are the most common gears. They general consist of a circular disk with equally spaced teeth extending radially to mesh with other spur gears.
 		<br>
 		<b>Fun Fact</b> – spur gears do not have to be circular. They can be any shape as long as the tooth pattern of one gear is an exact inverse of that of the gear it will mesh with. </p></div>
