More Update Circuit Stuff

--- a/Circuits.html
+++ b/Circuits.html
@@ -225,7 +225,9 @@ closed path </p>
 <br>
 <div class="row">
 	<div class="col-md-6">
-	<img src="Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /> </div>
+	<A HREF="Circuit_Popups/Example.html" 
+   onClick="return popup(this, 'Local and Global Variables')">
+	<img src="Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /></A></div>
 	<div class="col-md-6">
     <img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" /> </div>
 </div>
